--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "dependencies": {
     "bootstrap": "^5.1.1",
     "client": "^0.1.0",
+    "colors": "^1.4.0",
     "dotenv": "^10.0.0",
+    "mongoose": "^6.0.11",
     "react-bootstrap": "^2.0.0-rc.1"
   },
   "devDependencies": {
